	  support/regression/tests/gcc-torture-execute-20080529-1.c,
	  support/regression/tests/gcc-torture-execute-20120817-1.
	  support/regression/tests/gcc-torture-execute-920829-1.c,
	  support/regression/tests/gcc-torture-execute-950511-1.c,
	  support/regression/tests/gcc-torture-execute-961213-1.c,
	  support/regression/tests/gcc-torture-execute-pr65170:
	  Fix bugs #2329, #2656, #2653.

2017-11-06 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCval.c,
	  src/SDCCval.c,
	  src/SDCC.lex,
	  support/regression/tests/bug-2221.c,
	  support/regression/tests/bug-2687.c,
	  support/regression/tests/generic.c:
	  Fix bugs #2221, #2687.
	* configure.ac,
	  configure:
	  Fix bug #2689.

2017-11-05 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCralloc.hpp,
	  src/z80/gen.c,
	  support/regression/tests/bug-2681.c:
	  Fix bug #2681.
	* support/regression/tests/bug-2645.c:
	  Silence an mcs51 warning.
	* support/regression/tests/bug-2567.c,
	  support/regression/tests/gcc-torture-execute-pr60062.c,
	  support/regression/tests/gcc-torture-execute-pr63209.c,
	  support/regression/tests/gcc-torture-execute-pr80153.c:
	  Silence some warning about unused function arguments.

2017-11-03 Philipp Klaus Krause <pkk AT spth.de>

	* support/regression/tests/bug-2684.c:
	  Disable new test for mcs51-small, which doesn't have enough RAM.

2017-11-02 Philipp Klaus Krause <pkk AT spth.de>

	* support/regression/tests/bug-2684.c:
	  Test for bug #2684.

2017-11-01 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/ralloc2.cc:
	  Fix a bug in Z80 sfr handling.
	* support/scripts/Makefile.in:
	  Fix an access rights issue in make install, patch by Felix Salfelder.

2017-10-30 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c:
	  Fix --reserve-regs-iy issues, part of bug #2674.
	* device/lib/incl.mk:
	  Build library for mcs51 huge model, to reduce differences with Debian version.

2017-10-29 Philipp Klaus Krause <pkk AT spth.de>

	* support/regression/tests/bug-2580.c: